--- a/mamaskitchen/templates/index.jade
+++ b/mamaskitchen/templates/index.jade
@@ -1,19 +1,71 @@
+MenuList = ['']
+
 {% load static %}
 doctype html
 html(lang="en")
-	{% load require %}
-	head
-		link(href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" type="text/css", rel="stylesheet")
-		link(href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" type="text/css", rel="stylesheet")
-		{% require_module '../../app' %}
-		title="Sup"
-	body
-		nav.navbar.navbar-default
-			div.container
-				div.navbar-header
-					button.navbar-toggle.collapse(type="button", data-toggle="collapse", data-target="#menu-collapse", aria-expanded="false")
-						span.sr-only Toggle navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					a.navbar-brand(href="#") Mama's Kitchen
+{% load require %}
+head
+    link(href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" type="text/css", rel="stylesheet")
+    link(href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" type="text/css", rel="stylesheet")
+{% require_module '../../app' %}
+title="Sup"
+body
+    nav.navbar.navbar-default
+        .container
+            .navbar-header
+                button.navbar-toggle.collapse(type="button", data-toggle="collapse", data-target="#menu-collapse", aria-expanded="false")
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                a.navbar-brand(href="#") Mama's Kitchen
+            .collapse.navbar-collapse#menu-collapse
+                ul.nav.navbar-nav
+                    li.dropdown
+                        a.dropdown-toggle(href="#" data-toggle="menu-dropdown" role="button" aria-haspopup="true" aria-expanded="false") Menu
+                        span.caret
+                            ul.dropdown-menu
+                                li
+                                    a(href="#") Action
+
+
+
+
+
+//                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+//  <ul class="nav navbar-nav">
+//    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+//    <li><a href="#">Link</a></li>
+//    <li class="dropdown">
+//      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+//      <ul class="dropdown-menu">
+//        <li><a href="#">Action</a></li>
+//        <li><a href="#">Another action</a></li>
+//        <li><a href="#">Something else here</a></li>
+//        <li role="separator" class="divider"></li>
+//        <li><a href="#">Separated link</a></li>
+//        <li role="separator" class="divider"></li>
+//        <li><a href="#">One more separated link</a></li>
+//      </ul>
+//    </li>
+//  </ul>
+//  <form class="navbar-form navbar-left">
+//    <div class="form-group">
+//      <input type="text" class="form-control" placeholder="Search">
+//    </div>
+//    <button type="submit" class="btn btn-default">Submit</button>
+//  </form>
+//  <ul class="nav navbar-nav navbar-right">
+//    <li><a href="#">Link</a></li>
+//    <li class="dropdown">
+//      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+//      <ul class="dropdown-menu">
+//        <li><a href="#">Action</a></li>
+//        <li><a href="#">Another action</a></li>
+//        <li><a href="#">Something else here</a></li>
+//        <li role="separator" class="divider"></li>
+//        <li><a href="#">Separated link</a></li>
+//      </ul>
+//    </li>
+//  </ul>
+//</div><!-- /.navbar-collapse -->
