--- a/mamaskitchen/templates/index.html
+++ b/mamaskitchen/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "navbar.html" %}
+{% load static %}
+
 {% block content %}
     <div class="container">
     <h1>well</h1>
 </div>
+
+ <script src="{% static 'menu/menu.js' %}"></script>
 {% endblock %}
