--- a/mamaskitchen/templates/navbar.html
+++ b/mamaskitchen/templates/navbar.html
@@ -3,40 +3,48 @@
 <html lang="en">
 {% load require %}
 <head>
-    <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" />
-    <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" type="text/css" rel="stylesheet"/>
-    {% require_module '../../app' %}
+    <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet"/>
+    <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" type="text/css"
+          rel="stylesheet"/>
+
     <title>Sup</title>
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle collapse" type="button" data-toggle="collapse" data-target="#menu-collapse" aria-expanded="false" ></button>
-                <span class="sr-only">Toggle Navigation</span>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-collapse"
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <a href="#" class="navbar-brand" id="menu-collapse"> Mama's Kitchen</a>
-            </div>
-            <div class="collapse navbar-collapse" id="menu-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Menu <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            {% for type in types %}
-                                <li><a href="type/{{ type.id }}">{{ type.name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                </ul>
-            </div>
+            </button>
+            <a class="navbar-brand" href="/">Mama's Kitchen</a>
         </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="menu-collapse">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">
+                        Menu <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        {% for type in types %}
+                        <li><a href="type/{{ type.id }}">{{ type.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                <li><a href="{% url 'about' %}">About</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
     {% block content %}{% endblock %}
+</div>
+{% require_module '../../app' %}
 </body>
 
 </html>
