--- a/mamaskitchen/templates/navbar.html
+++ b/mamaskitchen/templates/navbar.html
@@ -38,6 +38,9 @@
                 </li>
                 <li><a href="{% url 'about' %}">About</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'userauth:login' %}">Login</a></li>
+            </ul>
         </div>
     </div>
 </nav>
