--- a/userauth/templates/login.html
+++ b/userauth/templates/login.html
@@ -3,7 +3,7 @@
     <h1>Third-party authentication demo</h1>
     <p>
         {% if user and not user.is_anonymous %}
-        Hello {{ user.get_full_name }}!
+        Hello {{ user }}!
         {% else %}
         I don’t think we’ve met before.
         {% endif %}
