urls and views now spitting objects out correctly

--- a/mamaskitchen/templates/about/about.html
+++ b/mamaskitchen/templates/about/about.html
@@ -1,3 +1,9 @@
-//
-   Created by pl on 10/24/16.
+{% extends "navbar.html" %}
+{% load static %}
 
+{% block content %}
+    <div class="container">
+    <h1>about</h1>
+</div>
+
+{% endblock %}
