--- a/mamaskitchen/templates/navbar.html
+++ b/mamaskitchen/templates/navbar.html
@@ -32,7 +32,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         {% for type in types %}
-                        <li><a href="type/{{ type.id }}">{{ type.name }}</a></li>
+                        <li><a href="/type/{{ type.id }}">{{ type.name }}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
