changed a bunch of stuff?

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
     <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" type="text/css"
           rel="stylesheet"/>
 
-    <title>Sup</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
