log in panel correctly display the menu at the same time

--- a/mamaskitchen/templates/index.html
+++ b/mamaskitchen/templates/index.html
@@ -6,5 +6,5 @@
     <h1>well</h1>
 </div>
 
- <script src="{% static 'menu/menu.js' %}"></script>
+ <script src="{% static 'js/menu.js' %}"></script>
 {% endblock %}
