--- a/userauth/templates/login.html
+++ b/userauth/templates/login.html
@@ -1,11 +1,12 @@
+{% extends 'navbar.html' %}
 {% block title %}Log In{% endblock %}
 {% block content %}
-    <h1>Log In</h1>
-    <p>
-        {% if user and not user.is_anonymous %}
+    <h1>Log in</h1>
+    <div class="col-md-4 col-md-offset-2">
+        {% if user and not user.is_anonymous%}
         Hello {{ user }}!
         {% else %}
         I don’t think we’ve met before.
         {% endif %}
-    </p>
+    </div>
 {% endblock %}
